<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <include
        android:id="@+id/include1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/commtitle" />

    <ImageView
        android:id="@+id/fenLeiBg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/include1"
        android:background="@drawable/fenlei_bg"
        android:contentDescription="@null"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fenLeiBg"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:scrollbars="none" >

        <RelativeLayout
            android:id="@+id/register_user_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/regitster_userid_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/register_userid_text"
                    style="@style/myRegisterTextView"
                    android:text="@string/RegisterUserid"
                    android:textSize="@dimen/news_l_item_content_size" />
                <!-- 用户文号编辑框 -->

                <EditText
                    android:id="@+id/register_userid_edit"
                    style="@style/myEditText"
                    android:layout_toRightOf="@+id/register_userid_text"
                    android:digits="@string/RegisterUseridInputrule"
                    android:hint="请输入名字"
                    android:maxLength="20"
                    android:singleLine="true"
                    android:textSize="@dimen/news_l_item_content_size" />
                <!-- 检测文号是否可用 -->

                <Button
                    android:id="@+id/register_userid_checked_btn"
                    android:layout_width="59dip"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/register_userid_edit"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/register_userid_edit"
                    android:background="@drawable/button"
                    android:text="@string/RegisterChecked"
                    android:textColor="@color/text_color" />
                <!-- 文号规则文字 -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/register_userid_checked_btn"
                    android:text="@string/Useridrepeat"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/reigster_userid_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_userid_text"
                    android:layout_toRightOf="@+id/register_userid_text"
                    android:text="@string/RegisterUseriddescribe" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_pwd_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/regitster_userid_layout"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/register_pwd_text"
                    style="@style/myRegisterTextView"
                    android:layout_width="@dimen/more_user_regis_text_w"
                    android:text="@string/RegisterPWD"
                    android:textSize="@dimen/news_l_item_content_size" />
                <!-- 用户密码编辑框 -->

                <EditText
                    android:id="@+id/register_pwd_edit"
                    style="@style/myEditText"
                    android:layout_toRightOf="@+id/register_pwd_text"
                    android:digits="@string/RegisterUseridInputrule"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textSize="@dimen/news_l_item_content_size" />

                <!-- 密码规则文字 -->

                <TextView
                    android:id="@+id/reigster_pwd_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/register_pwd_text"
                    android:layout_toRightOf="@+id/register_pwd_text"
                    android:text="@string/RegisterUserpwddescribe" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_repwd_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_pwd_layout"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/register_repwd_text"
                    style="@style/myRegisterTextView"
                    android:layout_width="@dimen/more_user_regis_text_w"
                    android:text="@string/RegisterPWD"
                    android:textSize="@dimen/news_l_item_content_size" />
                <!-- 用户密码编辑框 -->

                <EditText
                    android:id="@+id/register_repwd_edit"
                    style="@style/myEditText"
                    android:layout_toRightOf="@+id/register_repwd_text"
                    android:digits="@string/RegisterUseridInputrule"
                    android:hint="请输入确认密码"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:singleLine="true"
                    android:textSize="@dimen/news_l_item_content_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_email_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_repwd_layout"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/register_email_text"
                    style="@style/myRegisterTextView"
                    android:layout_width="@dimen/more_user_regis_text_w"
                    android:text="@string/RegisterEmail"
                    android:textSize="@dimen/news_l_item_content_size" />
                <!-- 用户邮箱编辑框 -->

                <EditText
                    android:id="@+id/register_email_edit"
                    style="@style/myEditText"
                    android:layout_toRightOf="@+id/register_email_text"
                    android:hint="@string/InputEmail"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/news_l_item_content_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_phone_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_email_layout"
                android:layout_marginTop="10dip" >

                <TextView
                    android:id="@+id/register_phone_text"
                    style="@style/myRegisterTextView"
                    android:layout_width="@dimen/more_user_regis_text_w"
                    android:text="@string/RegisterPhoneNum"
                    android:textSize="@dimen/news_l_item_content_size" />
                <!-- 用户手机编辑框 -->

                <EditText
                    android:id="@+id/register_phone_edit"
                    style="@style/myEditText"
                    android:layout_toRightOf="@+id/register_phone_text"
                    android:hint="@string/InputPhone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textSize="@dimen/news_l_item_content_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/register_checkcode_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_phone_layout" >
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/register_checkcode_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip" >

                <!-- 注册按钮 -->

                <Button
                    android:id="@+id/register_register_btn"
                    android:layout_width="88dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/Register"
                    android:textColor="@color/text_color" />
                <!-- 重置按钮 -->

                <Button
                    android:id="@+id/register_register_reset_btn"
                    android:layout_width="88dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/button"
                    android:text="@string/RegisterReset"
                    android:textColor="@color/text_color" />

               <!--  <Button
                    android:id="@+id/register_checkcode_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_1"
                    android:padding="5dp"
                    android:textColor="@color/text_color_yellow"
                    android:textSize="@dimen/news_l_item_content_size" /> -->
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>